[package]
name = "jikan_rs"
version = "0.1.0"
authors = ["Justin <justin@lonelybyte.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.1", features = ["blocking"] }
serde = { version = "*", features = ["derive"] }
serde_json ="*"